# rk3588_tool

./: .gitignore  Makefile  OVERVIEW.md  README.md  build_executable.py  config.toml  install.sh  main.py  pyproject.toml  rk3588-monitor.spec  start.sh
