[project]
name = "rk3588-tool"
version = "0.1.0"
description = "RK3588 System Monitor with Temperature, CPU, Memory and NPU monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.0.0",
    "textual>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]

[project.scripts]
rk3588-monitor = "main:main"
